--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build && cp dist/index.html dist/404.html",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "vite preview --port $PORT"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
